--- a/index.html
+++ b/index.html
@@ -1,23 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>54bricks</title>
-	<link rel="stylesheet" href="css/style.css" media="all">
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700,900' rel='stylesheet' type='text/css'>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script>
-		$(function(){
-			$(".tooltip").tipTip();
-		});
-	</script>
-</head>
-<body>
-	<div class="page">
-		<div id="title">
-			<h1>54bricks</h1>
-            <a href="mailto:contact@54bricks.com">Contact us</a>
-		</div>
-	</div>
-</body>
-</html>
+---
+layout: default
+---
